Fixed width icons; keeps their width the same whether expanded or collapsed

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -25,7 +25,6 @@ table {
     font-weight: bold;
     font-style: italic;
     font-size: 120%;
-    padding-left: 1ex;
 }
 
 .restaurant-row td {
